--- a/front-end/webapp/src/app/modules/pacientes/component/partial-matches-table/partial-matches-table.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/partial-matches-table/partial-matches-table.component.html
@@ -1,8 +1,8 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="matchingPatient" class="mat-elevation-z8">
 
 	<ng-container matColumnDef="ID">
 		<th mat-header-cell *matHeaderCellDef>ID</th>
-		<td mat-cell *matCellDef="let element"> {{element.id}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.idPaciente}} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Nombres">
