tg-32 [FE] agraga parametros default para la busqueda de pacientes

--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
@@ -7,7 +7,7 @@
 			<span [translate]="'Complete los siguientes datos para una busqueda avanzada.'"></span>
 		</p>
 		<div class="content">
-			<form [formGroup]="formSearch" (ngSubmit)="serch()">
+			<form [formGroup]="formSearch" (ngSubmit)="search()">
 				<br>
 				<mat-form-field appearance="outline">
 					<mat-label>Tipo</mat-label>
