tg-103. [BE] Implementar endpoint para obtener el resumén de la internación

--- a/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
@@ -26,7 +26,7 @@
 
 	<ng-container matColumnDef="Especialidad">
 		<th mat-header-cell *matHeaderCellDef>Especialidad</th>
-		<td mat-cell *matCellDef="let element"> {{ element.bed.room.specialty.name }}</td>
+		<td mat-cell *matCellDef="let element"> {{ element.specialty.name }}</td>
 	</ng-container>
 
 	<ng-container matColumnDef="Nro Habitación">
