tg-114 agrega componente de resumen de internacion aplica en ficha internacion y formulario de anamnesis agrega paleta de acentuación

--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
@@ -2,9 +2,9 @@
     <section *ngIf="viewSearchComponent()">
 		<h1 [translate]="'pacientes.search.TITLE'">Búsqueda de pacientes</h1>
 		<p>
-			<span [translate]="'No se ha encontrado un paciente registrado con ese tipo y numero de documento.'"></span>
+			<span [translate]="'No se ha encontrado un paciente registrado con ese tipo y número de documento.'"></span>
 			<br>
-			<span [translate]="'Complete los siguientes datos para una busqueda avanzada.'"></span>
+			<span [translate]="'Complete los siguientes datos para una búsqueda avanzada.'"></span>
 		</p>
 		<div class="content">
 			<form [formGroup]="formSearch" (ngSubmit)="search()">
