--- a/front-end/webapp/src/assets/styles/palettes.scss
+++ b/front-end/webapp/src/assets/styles/palettes.scss
@@ -30,3 +30,36 @@ $primary-palette: (
 		A700 : #ffffff,
 	)
 );
+
+$accent-palette: (
+    50 : #eeeef3,
+    100 : #d4d5e1,
+    200 : #b8b9cd,
+    300 : #9b9cb9,
+    400 : #8587aa,
+    500 : #70729b,
+    600 : #686a93,
+    700 : #5d5f89,
+    800 : #53557f,
+    900 : #41426d,
+    A100 : #c6c7ff,
+    A200 : #9395ff,
+    A400 : #6064ff,
+    A700 : #474bff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #ffffff,
+        A700 : #ffffff,
+    )
+);
