--- a/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
@@ -7,7 +7,7 @@
 			</mat-card-subtitle>
 		</mat-card-header>
 		<mat-card-content>
-			<div class="">
+			<div>
 				<mat-form-field appearance="outline">
 					<mat-label>Tipo</mat-label>
 					<mat-select
@@ -39,9 +39,9 @@
 					</mat-error>
 				</mat-form-field>
 			</div>
-			<div class="">
+			<div>
 				<mat-label>Sexo</mat-label>
-				<div class="">
+				<div>
 					<mat-radio-group name="gender" id="gender" formControlName="gender">
 						<mat-radio-button *ngFor="let gender of genderOptions" [value]="gender.id">
 							{{gender.description}}
@@ -52,22 +52,20 @@
 					</mat-error>
 				</div>
 			</div>
-			<div class="">
+			<div>
 				<section>
-					<mat-checkbox class="" (change)="noIdentityChange()">
+					<mat-checkbox (change)="noIdentityChange()">
 						No acredita identidad
 					</mat-checkbox>
 				</section>
 
 			</div>
-		</mat-card-content>
-		<mat-card-actions>
 			<div align="end">
 				<button mat-flat-button color="primary" type="submit" *ngIf="!noIdentity">
 					<span [translate]="'pacientes.home.find_add_section.BUTTON_SEARCH'"></span>
 				</button>
 			</div>
-		</mat-card-actions>
+		</mat-card-content>
 	</form>
 
 	<form [formGroup]="formAdd" (ngSubmit)="add()">
@@ -103,14 +101,12 @@
 					formControlName="comments">
 				</textarea>
 			</mat-form-field>
-		</mat-card-content>
-		<mat-card-actions *ngIf="noIdentity">
 			<div align="end">
 				<button mat-flat-button color="primary" type="submit">
 					<span [translate]="'pacientes.home.find_add_section.BUTTON_ADD'"></span>
 				</button>
 			</div>
-		</mat-card-actions>
+		</mat-card-content>
 	</form>
 </mat-card>
 
