--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -34,7 +34,7 @@
 }
 
 @mixin mat-card-box($theme) {
-	$primary-palette: map-get($theme, primary);
+	$accent-palette: map-get($theme, accent);
 
 	mat-card.box {
 		padding: 0;
@@ -42,8 +42,8 @@
 			padding: 10px;
 			border-top-left-radius: 4px;
 			border-top-right-radius: 4px;
-			background-color: mat-color($primary-palette, default);
-			color: mat-color($primary, default-contrast);
+			background-color: mat-color($accent-palette, default);
+			color: mat-color($accent, default-contrast);
 			& div.mat-card-header-text {
 				align-self: center;
 				mat-card-title.mat-card-title {
