--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
@@ -1,7 +1,6 @@
 .container-column {
 	display: flex;
 	flex-direction: column;
-	width: 70%;
 
 	section {
 		margin: 1vh;
@@ -11,7 +10,25 @@
 form {
 	padding-top: 25px;
 
-	mat-form-field {
-		width: 60%;
+	mat-form-field, .form-buttons {
+		width: 70%;
+	}
+
+	.form-buttons {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: flex-end;
+		button {
+			margin-right: 10px;
+			margin-top: 10px;
+		}
+	}
+
+	.firma-buttons {
+		display: flex;
+		flex-direction: column;
+		width: 40%;
 	}
 }
+
