--- a/front-end/webapp/src/app/modules/internacion/components/routes/anamnesis/anamnesis.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/components/routes/anamnesis/anamnesis.component.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	& > * {
-		width: 40%;
-	}
+		& > *:first-child {
+			 width: 70%;
+		 }
 }
