tg-129 reacomoda modulo presentation y crea mapperService

--- a/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.scss
@@ -1,4 +1,4 @@
-@import "src/assets/styles/variables.scss";
+@import "../../../../../assets/styles/variables";
 
 .flex-container, .mat-line.flex-container {
 	display: flex;
