--- a/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.scss
@@ -1,7 +1,7 @@
-@import "src/assets/styles/variables.scss";
+@import "../../../../../assets/styles/variables";
 
 .header-image {
-	background-image: url("src/assets/images/empty-profile.svg");
+	background-image: url("../../../../../assets/images/empty-profile.svg");
 	background-size: cover;
 	width: 65px;
 	height: 65px;
