--- a/front-end/webapp/src/app/modules/pacientes/component/partial-matches-table/partial-matches-table.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/partial-matches-table/partial-matches-table.component.html
@@ -2,12 +2,12 @@
 
 	<ng-container matColumnDef="ID">
 		<th mat-header-cell *matHeaderCellDef>ID</th>
-		<td mat-cell *matCellDef="let element"> {{element.idPaciente}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.idPatient}} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Nombres">
 		<th mat-header-cell *matHeaderCellDef>Nombres</th>
-		<td mat-cell *matCellDef="let element"> {{element.person.name}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.person.firstName}} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Apellidos">
@@ -32,7 +32,7 @@
 
 	<ng-container matColumnDef="Estado">
 		<th mat-header-cell *matHeaderCellDef>Estado</th>
-		<td mat-cell *matCellDef="let element"> {{element.type.description}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.activo}} </td>
 	</ng-container>
 
 	<ng-container matColumnDef="Coincidencia">
