tg-133 conectar endpoint de resumen de episodio en ficha de internacion

--- a/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
@@ -2,11 +2,11 @@
 	<mat-list-item id="bed">
 		<div class="flex-container">
 			<mat-icon color="accent" mat-list-icon [inline]="true">meeting_room</mat-icon>
-			<span class="mat-body-2">{{ internmentEpisode?.room?.number }}</span>
+			<span class="mat-body-2">{{ internmentEpisode?.roomNumber }}</span>
 			<mat-icon color="accent" mat-list-icon [inline]="true">single_bed</mat-icon>
-			<span class="mat-body-2">{{ internmentEpisode?.bed?.number }}</span>
+			<span class="mat-body-2">{{ internmentEpisode?.bedNumber }}</span>
 			<span class="mat-body-2">
-				{{ internmentEpisode?.specialty?.name }}
+				{{ internmentEpisode?.specialtyName }}
 			</span>
 		</div>
 	</mat-list-item>
@@ -16,9 +16,9 @@
 	<mat-list-item id="doctor">
 		<mat-icon color="accent" mat-list-icon>person</mat-icon>
 		<span class="mat-body-2">
-			{{internmentEpisode?.doctor?.firstName}} {{internmentEpisode?.doctor?.lastName}}
+			{{internmentEpisode?.doctor.firstName}} {{internmentEpisode?.doctor.lastName}}
 		</span>
-		<span class="mat-caption"> {{internmentEpisode?.doctor?.license}}</span>
+		<span class="mat-caption"> {{internmentEpisode?.doctor.license}}</span>
 	</mat-list-item>
 
 	<mat-divider inset></mat-divider>
