--- a/front-end/webapp/src/app/modules/internacion/components/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/routes/internacion-paciente/internacion-paciente.component.html
@@ -4,7 +4,7 @@
 		<div class="flex-layout">
 			<app-patient-card [patient]="patient$ | async"></app-patient-card>
 			<app-summary-card [header]="internacionSummary">
-				<app-internment-episode-summary></app-internment-episode-summary>
+				<app-internment-episode-summary [internmentEpisode]="internmentEpisode$ | async"></app-internment-episode-summary>
 			</app-summary-card>
 		</div>
 	</section>
