tg-119 acomoda heading de la app

--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -1,11 +1,11 @@
 <div class="container-column">
 	<section>
-		<h1 [translate]="'internaciones.anamnesis.TITLE'"></h1>
-		<h2 [translate]="'internaciones.anamnesis.SUBTITLE'"></h2>
+		<h2 [translate]="'internaciones.anamnesis.TITLE'"></h2>
+		<h4 [translate]="'internaciones.anamnesis.SUBTITLE'"></h4>
 	</section>
 
 	<section id="observations">
-		<span [translate]="'internaciones.anamnesis.observations.TITLE'"></span>
+		<h3 [translate]="'internaciones.anamnesis.observations.TITLE'"></h3>
 
 		<form [formGroup]="form" (ngSubmit)="save()">
 			<div>
