--- a/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
@@ -12,11 +12,10 @@
                         <mat-select id="identificationTypeId"
                             name="identificationTypeId"
                             formControlName="identificationTypeId"
-                            [(ngModel)]="datosPersonales.identificationTypeId"
                             placeholder="{{'pacientes.form.SELECT' | translate}}"
                         >
                             <mat-option *ngFor="let identificationType of identificationTypeList"
-                                                    [value]="datosPersonales.identificationTypeId">
+                                                    [value]="identificationType.id">
                                             {{identificationType.description}}
                             </mat-option>
                         </mat-select>
@@ -32,7 +31,6 @@
                         <input id="identificationNumber"
                             name="identificationNumber"
                             formControlName="identificationNumber"
-                            [(ngModel)]="datosPersonales.identificationNumber"
                             placeholder="{{'pacientes.form.ONLY_NUMBERS' | translate}}"
                             maxlength="10"
                             matInput
@@ -46,7 +44,7 @@
                 <div>
                     <span [translate]="'pacientes.form.GENDER'"></span>
                 </div>
-                <mat-radio-group formControlName="genderId" [(ngModel)]="datosPersonales.genderId">
+                <mat-radio-group formControlName="genderId">
                     <mat-radio-button *ngFor="let gender of genders" [value]="gender.id">{{gender.description}}</mat-radio-button>
                 </mat-radio-group>
                 <mat-error *ngIf="hasError(form,'required','genderId') && formSubmitted" [translate]="'pacientes.form.REQUIRED'"></mat-error>
@@ -62,7 +60,6 @@
                         <input id="firstName"
                             name="firstName"
                             formControlName="firstName"
-                            [(ngModel)]="datosPersonales.firstName"
                             placeholder="{{'pacientes.form.FIRST_NAME' | translate}}"
                             maxlength="20"
                             matInput
@@ -75,7 +72,6 @@
                     <input id="middleNames"
                         name="middleNames"
                         formControlName="middleNames"
-                        [(ngModel)]="datosPersonales.middleNames"
                         placeholder="{{'pacientes.form.MIDDLE_NAMES' | translate}}"
                         maxlength="20"
                         matInput
@@ -92,7 +88,6 @@
                     <input id="lastName"
                         name="lastName"
                         formControlName="lastName"
-                        [(ngModel)]="datosPersonales.lastName"
                         placeholder="{{'pacientes.form.LAST_NAME' | translate}}"
                         maxlength="20"
                         matInput
@@ -103,7 +98,6 @@
                     <input id="otherLastNames"
                         name="otherLastNames"
                         formControlName="otherLastNames"
-                        [(ngModel)]="datosPersonales.otherLastNames"
                         placeholder="{{'pacientes.form.OTHER_LAST_NAMES' | translate}}"
                         maxlength="20"
                         matInput
@@ -117,7 +111,7 @@
         </div>
         <div>
             <mat-form-field appearance="outline">
-                <input formControlName="birthDate" id="birthDate" matInput [max]="todaysDate" [matDatepicker]="picker2" [(ngModel)]="datosPersonales.birthDate">
+                <input formControlName="birthDate" id="birthDate" matInput [max]="todaysDate" [matDatepicker]="picker2">
                 <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                 <mat-datepicker #picker2></mat-datepicker>
             </mat-form-field>
@@ -128,7 +122,7 @@
             <div>
                 <span [translate]="'pacientes.form.GENDER_SELF_DETERMINATION'"></span>
             </div>
-            <mat-radio-group formControlName="genderSelfDeterminationId" [(ngModel)]="datosPersonales.genderSelfDeterminationId">
+            <mat-radio-group formControlName="genderSelfDeterminationId">
                 <mat-radio-button *ngFor="let gender of genders" [value]="gender.id">{{gender.description}}</mat-radio-button>
             </mat-radio-group>
         </div>
@@ -142,7 +136,6 @@
                 <input id="nameSelfDetermination"
                     name="nameSelfDetermination"
                     formControlName="nameSelfDetermination"
-                    [(ngModel)]="datosPersonales.nameSelfDetermination"
                     placeholder="{{'pacientes.form.NAME_SELF_DETERMINATION' | translate}}"
                     maxlength="25"
                     matInput
@@ -157,7 +150,6 @@
             <input id="mothersLastName"
                 name="mothersLastName"
                 formControlName="mothersLastName"
-                [(ngModel)]="datosPersonales.mothersLastName"
                 placeholder= "{{'pacientes.form.MOTHERS_LAST_NAME' | translate}}"
                 maxlength="20"
                 matInput
@@ -172,7 +164,6 @@
                 name="cuil"
                 formControlName="cuil"
                 maxlength="10"
-                [(ngModel)]="datosPersonales.cuil"
                 placeholder="{{'pacientes.form.ONLY_NUMBERS' | translate}}"
                 matInput
             >
@@ -186,7 +177,6 @@
                 <mat-select id="addressCityId"
                     name="addressCityId"
                     formControlName="addressCityId"
-                    [(ngModel)]="datosPersonales.addressCityId"
                     placeholder="{{'pacientes.form.ADDRESS_CITY' | translate}}"
                 >
                     <mat-option *ngFor="let city of cities"
@@ -201,7 +191,6 @@
                 formControlName="addressPostcode"
                 maxlength="6"
                 pattern="[0-9]{1,6}"
-                [(ngModel)]="datosPersonales.addressPostcode"
                 placeholder="{{'pacientes.form.ADDRESS_POSTCODE' | translate}}"
                 matInput
                 >
@@ -213,7 +202,6 @@
                 name="addressStreet"
                 formControlName="addressStreet"
                 maxlength="35"
-                [(ngModel)]="datosPersonales.addressStreet"
                 maxlength="35"
                 placeholder="{{'pacientes.form.ADDRESS_STREET' | translate}}"
                 matInput
@@ -225,7 +213,6 @@
                 name="addressNumber"
                 formControlName="addressNumber"
                 maxlength="5"
-                [(ngModel)]="datosPersonales.addressNumber"
                 placeholder="{{'pacientes.form.ADDRESS_NUMBER' | translate}}"
                 matInput
                 >
@@ -236,7 +223,6 @@
                 name="addressFloor"
                 formControlName="addressFloor"
                 maxlength="2"
-                [(ngModel)]="datosPersonales.addressFloor"
                 placeholder="{{'pacientes.form.ADDRESS_FLOOR' | translate}}"
                 matInput
                 >
@@ -247,7 +233,6 @@
                 name="addressApartment"
                 formControlName="addressApartment"
                 maxlength="3"
-                [(ngModel)]="datosPersonales.addressApartment"
                 placeholder="{{'pacientes.form.ADDRESS_APARTMENT' | translate}}"
                 matInput
                 >
@@ -258,7 +243,6 @@
                 name="addressQuarter"
                 formControlName="addressQuarter"
                 maxlength="30"
-                [(ngModel)]="datosPersonales.addressQuarter"
                 placeholder="{{'pacientes.form.ADDRESS_QUARTER' | translate}}"
                 matInput
                 >
@@ -273,7 +257,6 @@
                 name="phoneNumber"
                 formControlName="phoneNumber"
                 maxlength="15"
-                [(ngModel)]="datosPersonales.phoneNumber"
                 placeholder="{{'pacientes.form.PHONE_NUMBER' | translate}}"
                 matInput
             >
@@ -286,7 +269,6 @@
             <input id="email"
                 name="email"
                 formControlName="email"
-                [(ngModel)]="datosPersonales.email"
                 placeholder="usuario@usuario.com"
                 maxlength="100"
                 matInput
@@ -303,7 +285,6 @@
                     name="religion"
                     formControlName="religion"
                     maxlength="25"
-                    [(ngModel)]="datosPersonales.religion"
                     placeholder="{{'pacientes.form.RELIGION' | translate}}"
                     matInput
                 >
@@ -319,7 +300,6 @@
                     name="ethnic"
                     formControlName="ethnic"
                     maxlength="25"
-                    [(ngModel)]="datosPersonales.ethnic"
                     placeholder="{{'pacientes.form.ETHNIC' | translate}}"
                     matInput
                 >
