tg-137 agrega soporte para filtrado al componente tabla

--- a/front-end/webapp/src/app/modules/presentation/components/table-simple/table-simple.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/table-simple/table-simple.component.html
@@ -1,3 +1,7 @@
+<mat-form-field *ngIf="filterEnabled">
+	<mat-label>Filtro</mat-label>
+	<input matInput (keyup)="applyFilter($event)">
+</mat-form-field>
 <table mat-table [dataSource]="dataSource" [class]="tableClass">
 	<ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
 		<th *matHeaderCellDef>{{ column.header | translate }}</th>
