--- a/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
@@ -1,53 +1,4 @@
-<mat-form-field>
-	<mat-label>Filtro</mat-label>
-	<input matInput (keyup)="applyFilter($event)" placeholder="">
-</mat-form-field>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-	<ng-container matColumnDef="ID Paciente">
-		<th mat-header-cell *matHeaderCellDef>ID Paciente</th>
-		<td mat-cell *matCellDef="let element"> {{ element.patient.id }} </td>
-	</ng-container>
-
-	<ng-container matColumnDef="Nombre Médico">
-		<th mat-header-cell *matHeaderCellDef>Nombre Médico</th>
-		<td mat-cell *matCellDef="let element"> {{ element.doctor.firstName }} </td>
-	</ng-container>
-
-	<ng-container matColumnDef="Apellido Médico">
-		<th mat-header-cell *matHeaderCellDef>Apellido Médico</th>
-		<td mat-cell *matCellDef="let element"> {{ element.doctor.lastName }} </td>
-	</ng-container>
-
-	<ng-container matColumnDef="Sector">
-		<th mat-header-cell *matHeaderCellDef>Sector</th>
-		<td mat-cell *matCellDef="let element"> {{ element.bed.room.sector.name }}</td>
-	</ng-container>
-
-	<ng-container matColumnDef="Especialidad">
-		<th mat-header-cell *matHeaderCellDef>Especialidad</th>
-		<td mat-cell *matCellDef="let element"> {{ element.specialty.name }}</td>
-	</ng-container>
-
-	<ng-container matColumnDef="Nro Habitación">
-		<th mat-header-cell *matHeaderCellDef>Nro Habitación</th>
-		<td mat-cell *matCellDef="let element"> {{ element.bed.room.roomNumber }}</td>
-	</ng-container>
-
-	<ng-container matColumnDef="Nro Cama">
-		<th mat-header-cell *matHeaderCellDef>Nro Cama</th>
-		<td mat-cell *matCellDef="let element"> {{ element.bed.bedNumber }}</td>
-	</ng-container>
-
-	<ng-container matColumnDef="Action">
-		<th mat-header-cell *matHeaderCellDef></th>
-		<td mat-cell *matCellDef="let element">
-			<button mat-flat-button color="primary" (click)="actionRow(element)">
-				Ver
-			</button>
-		</td>
-	</ng-container>
-
-	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<app-table-simple
+	[model]="internacionesTable"
+	[tableClass]="'mat-elevation-z8'">
+</app-table-simple>
