tg-138 relocacion y renombre componente tabla

--- a/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
@@ -1,4 +1,4 @@
-<app-table-simple
+<app-table
 	[model]="internacionesTable"
 	[tableClass]="'mat-elevation-z8'">
-</app-table-simple>
+</app-table>
