tg-144 add componente antecedentes personales

--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -5,6 +5,9 @@
 	</section>
 
 	<section id="observations">
+
+		<app-antecentes-personales></app-antecentes-personales>
+
 		<h3 [translate]="'internaciones.anamnesis.observations.TITLE'"></h3>
 
 		<form [formGroup]="form" (ngSubmit)="save()">
