--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -1,4 +1,4 @@
-<div class="container-column">
+<div class="container">
 	<section>
 		<h2 [translate]="'internaciones.anamnesis.TITLE'"></h2>
 		<h4 [translate]="'internaciones.anamnesis.SUBTITLE'"></h4>
