--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -20,28 +20,39 @@
 @mixin mat-table($theme) {
 	$primary-palette: map-get($theme, primary);
 
-	table.mat-table {
-		width: 100%;
-		text-align: center;
-		thead {
-			background-color: mat-color($primary-palette, default);
-			th {
-				text-align: center;
-				color: mat-color($primary, default-contrast);
-			}
+	app-table {
+		.mat-form-field {
+			width: 50%;
 		}
-		&.secondary {
-			border-collapse: collapse;
+
+		div.no-data.mat-h3 {
+			padding: 30px 0;
+			text-align: center;
+			border: solid 1px #A8A8A8;
+		}
+		table.mat-table {
+			width: 100%;
+			text-align: center;
 			thead {
-				background-color: #F0F0F0;
+				background-color: mat-color($primary-palette, default);
 				th {
-					color: #282828;
+					text-align: center;
+					color: mat-color($primary, default-contrast);
 				}
 			}
-			tr {
-				border: solid 1px #A8A8A8;
-				th, td {
-					border-bottom: none;
+			&.secondary {
+				border-collapse: collapse;
+				thead {
+					background-color: #F0F0F0;
+					th {
+						color: #282828;
+					}
+				}
+				tr {
+					border: solid 1px #A8A8A8;
+					th, td {
+						border-bottom: none;
+					}
 				}
 			}
 		}
@@ -70,6 +81,16 @@
 		}
 		mat-card-content {
 			padding: 10px;
+		}
+	}
+}
+
+@mixin mat-dialog($theme) {
+	$primary-palette: map-get($theme, primary);
+
+	.mat-dialog-title {
+		div.mat-h1 {
+			color: mat-color($primary, default);
 		}
 	}
 }
